tests/baselines/reference/incorrectRecursiveMappedTypeConstraint.errors.txt
tests/cases/compiler/incorrectRecursiveMappedTypeConstraint.ts(2,32): error TS2322: Type 'T' is not assignable to type 'string'.
  Type '{ [P in T]: number; }' is not assignable to type 'string'.


==== tests/cases/compiler/incorrectRecursiveMappedTypeConstraint.ts (1 errors) ====
    // #17847
    function sum<T extends { [P in T]: number }, K extends keyof T>(n: number, v: T, k: K) {
                                   ~
!!! error TS2322: Type 'T' is not assignable to type 'string'.
!!! error TS2322:   Type '{ [P in T]: number; }' is not assignable to type 'string'.
        n += v[k];
    }
    